--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,17 @@
 body {
   /* padding: 50px; */
-  background-color: #f4f5f7;
+  background: #E0EAFC;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+
+  /* background-color: #f4f5f7; */
   font-family: 'Roboto Slab', sans-serif;
+}
+
+.card {
+  box-shadow: 2px 2px 2px rgba(0,0,0, 0.3); 
 }
 
 #leave-button {
@@ -83,25 +93,28 @@ table.gridtable td {
 .table-responsive {
     max-height:200px;
 }
-/*
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }*/
-/*body {
-  font: 13px Helvetica, Arial;
-}*/
-/*#chat-box{
-  border-width: 200px;
-  border-color: rgb(235, 238, 244);
-  border-style: solid;
-}*/
+
 #messages{
-  border-width: 1px;
-  border-color: rgb(235, 238, 244);
-  border-style: solid;
+  border: 1px solid #ced4da;
+  list-style-type: none; 
+  border-radius: 0.25rem;
+  width: 100%;
+  height: 100%;
+  min-height: 60%;
+  overflow-y: scroll; 
+  padding-left: 5px;
+  padding-right: 5px; 
 }
+
+#chat-name input, #chat-handle{
+  line-height: 0%;
+  /* max-height: 35px; */
+  /* padding: 10px; */
+}
+#chat-name input {
+  text-align: center
+}
+
 form {
   padding: 3px;
   position: relative;
@@ -120,39 +133,9 @@ form button {
   background: rgb(166, 189, 224);
 }
 
-#messages {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-/*#messages li {
-  padding: 5px 10px;
-}
-
-#messages li:nth-child(odd) {
-  background: #eee;
-}*/
-
 .row {
   height: inherit;
 }
-
-/* draw and play deck CSS style */
-/* #deck-container {
-  margin-top: 13%;
-  margin-left: 31%;
-} */
-/* #play-deck {
-  margin-left: 250px;
-} */
-
-/* my deck CSS style */
-/* #my-hand {
-  position: absolute;
-  margin-left: 15%;
-  bottom: 0%;
-} */
 
 #my-hand img:hover {
   z-index: 1;
@@ -188,53 +171,7 @@ form button {
   z-index: 10;
 }
 
-/* #my-hand img:nth-child(2) {
-  position: absolute;
-  left: 60px;
-}
-#my-hand img:nth-child(3) {
-  position: absolute;
-  left: 120px;
-}
-#my-hand img:nth-child(4) {
-  position: absolute;
-  left: 180px;
-}
-#my-hand img:nth-child(5) {
-  position: absolute;
-  left: 240px;
-}
-#my-hand img:nth-child(6) {
-  position: absolute;
-  left: 300px;
-}
-#my-hand img:nth-child(7) {
-  position: absolute;
-  left: 360px;
-}
-#my-hand img:nth-child(8) {
-  position: absolute;
-  left: 420px;
-} */ */
 
-/* other players' CSS style */
-/* #opponents {
-  position: absolute;
-  top: 8%;
-}
-
-#opponent-1, #opponent-2, #opponent-3 {
-  float: left;
-}
-#opponent-1 {
-  margin-left: 200px;
-}
-#opponent-2 {
-  margin-left: 315px;
-}
-#opponent-3 {
-  margin-left: 250px;
-} */
 p {
   color: white;
   text-align: center;
