--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="margin-top: 10px">
         <div class="col-lg-12 card h-100">
           <div class="card-body">
             <h4 class="card-title title">
@@ -79,25 +79,26 @@
           <h4 class="card-title title">
             <a href="#">Chat Space</a>
           </h4>
-          <li class="login page">
-           <div class="form">
-             <% if(user) { %>
-               username: <input id="nameInput" value = <%= user.username %> type="text" maxlength="14" disabled/>
-             <% } else { %>
-               <h4>What's your nickname?</h4>
-               <input id="nameInput" placeholder = "nickname" type="text" maxlength="14" />
-             <% } %>
-           </div>
-          </li>
-          <div class="container" width = 200 height = 100 color="blue">
-
+          <div class="input-group" id="chat-name">
+              <% if(user) { %>
+                <div class="input-group-prepend">
+                  <span id="chat-handle" class="input-group-text"><strong>Username</strong></span>
+                </div>
+                <input id="nameInput" class="form-control" value="<%= user.username %>" type="text" maxlength="14" disabled>
+              <% } else { %>
+                <div class="input-group-prepend">
+                  <span id="chat-handle" class="input-group-text"><strong>Nickname</strong></span>
+                </div>
+                <input id="nameInput" class="form-control" placeholder="Choose a nickname" type="text" maxlength="14">
+              <% } %>
           </div>
-					<ul id="messages"></ul>
-					<form id="chatForm" action="">
-						<input id="m" placeholder="message"autocomplete="off"/>
-						<button id ='click'> Send
-						</button>
-					</form>
+          <ul id="messages"></ul>
+          <div class="input-group mb-3">
+              <input type="text" id="chat-message" class="form-control" placeholder="Type message here..." autocomplete="off"/>        
+              <div class="input-group-append">
+                <button id="send-button" class="btn btn-outline-primary" type="button">Send</button>
+              </div>
+            </div>
         </div>
       </div>
     </div>
