--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,7 +99,7 @@ table.gridtable td {
   list-style-type: none; 
   border-radius: 0.25rem;
   width: 100%;
-  height: 100%;
+  height: 200px;
   min-height: 60%;
   overflow-y: scroll; 
   padding-left: 5px;
