--- a/views/gameroom.ejs
+++ b/views/gameroom.ejs
@@ -21,7 +21,7 @@
 	</style>
 	<div class="row" id='main-container'>
 
-		<div class="col-9">
+		<div id="game-area" class="col-9">
 				<!-- other players' deck -->
 			<div class="row" id="opponents">
 				<div class="col-4 center" id="opponent-1"></div>
@@ -80,7 +80,7 @@
 					<input id="leave-button" type="submit" style="background-color:black;color:white" value="LEAVE ROOM">
 				</form>
 			</div>
-			<div class="row" style="margin-top: 30%">
+			<div class="row" style="margin-top: 30%;">
 					<ul id="messages"></ul>
           <div class="input-group mb-3">
               <input type="text" id="chat-message" class="form-control" placeholder="Type message here..." autocomplete="off"/>        
