--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -146,7 +146,31 @@ form button {
 }
 
 #decks img {
-  width: 55%;
+  min-width: 100%;
+}
+
+#play-deck, #draw-deck {
+  max-width: 16%;
+}
+
+#color-picker > div {
+  width: 100%;
+  height: 25%;
+  border: white solid 2px;
+  border-radius: 5px;
+}
+
+#red {
+  background-color: rgb(245, 100, 98);
+}
+#blue {
+  background-color: rgb(0, 195, 229);
+}
+#green {
+  background-color: rgb(47, 226, 155);
+}
+#yellow {
+  background-color: rgb(247, 227, 89);
 }
 
 #my-hand img {
