--- a/views/gameroom.ejs
+++ b/views/gameroom.ejs
@@ -36,7 +36,7 @@
 				</div>
 				<div class="col-2" id="turn-indicator"></div>
 				<div id="play-deck" class="col-3 col-md-offset-3"></div>
-				<div class="col-2"></div>				
+				<div id="color-picker" class="col-1"></div>				
 			</div>
 
 			<div class="row">
