--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,8 +2,23 @@
 
 <div class="content">
 <div class="container">
-  <div class="row" style="width: 30%; margin-top: 100px; margin-left: 40%;">
-		<h1 class="center" style="width: 70%"> Login </h1>
+	<div class="container">
+			<% if(error) { %>
+				<div id="error">
+					<div class="alert alert-danger show fade center" role="alert">
+						<% if(error == "invalid") { %> 
+							Invalid username or password	
+						<% } else { %> 
+							Sorry, something went wrong
+						<% } %>
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+				</div>
+			<% } %>
+  <div class="row" style="width: 30%; margin-top: 100px; margin-left: 34%;">
+		<h1 class="center" style="width: 100%"> Login </h1>
 		<form action="/user/login" method="POST">
 			<div class="form-group">
 				<input id="login" type="text" name="username" placeholder="Username" class="form-control" required>
