--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,23 @@
 <% include ./partials/header %>
 <div class="container">
-	<div class="row" style="width: 30%; margin-top: 50px; margin-left: 40%;">
-		<h1 class="center" style="width: 75.3%"> Register </h1>
+	<% if(error) { %>
+		<div id="error">
+			<div class="alert alert-danger show fade center" role="alert">
+				<% if(error == "nameexists") { %> 
+					Sorry, that username is already taken	
+				<% } else if(error == "emailexists") { %> 
+					Sorry, someone has already registered with that email
+				<% } else { %> 
+					Sorry, something went wrong
+				<% } %>
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+		</div>
+	<% } %>
+	<div class="row" style="width: 30%; margin-top: 50px; margin-left: 35%;">
+		<h1 class="center" style="width: 100%"> Register </h1>
 		<form action="/user/register" method="POST">
 			<div class="form-group">
 				<input id="username" type="text" name="username" placeholder="Username" class="form-control" required>
@@ -25,3 +41,4 @@
 		</form>
 	</div>
 </div>
+<% include ./partials/footer %>
