--- a/views/gameroom.ejs
+++ b/views/gameroom.ejs
@@ -54,6 +54,7 @@
 						<input type="submit" id="start-button" style="background-color:black;color:white" value="START">
 						<input type="submit" id="pass-turn" style="background-color:black;color:white" value="PASS">
 						<input type="submit" id="uno" style="background-color:black;color:white" value="UNO">
+						<input type="submit" id="catch" style="background-color:black;color:white" value="CATCH">
 						<input type="submit" id="draw-card" style="background-color:black;color:white" value="DRAW">
 					</div>
 				</div>
